--- a/ARcowabungaproject/res/layout/activity_main.xml
+++ b/ARcowabungaproject/res/layout/activity_main.xml
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:text="@string/menu_esp"
+            android:text="@string/menu"
             android:textSize="17sp"
             android:textColor="@android:color/white" />
     </LinearLayout>
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:text="@string/menu_actual_order_esp"
+            android:text="@string/menu_actual_order"
             android:textSize="17sp"
             android:textColor="@android:color/white" />
     </LinearLayout>
@@ -94,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:text="@string/menu_contact_esp"
+            android:text="@string/menu_contact"
             android:textSize="17sp"
             android:textColor="@android:color/white" />
     </LinearLayout>
@@ -122,7 +122,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
-            android:text="@string/menu_last_orders_esp"
+            android:text="@string/menu_last_orders"
             android:textSize="17sp"
             android:textColor="@android:color/white" />
     </LinearLayout>
