--- a/ARcowabungaproject/res/layout/tab_pizzas.xml
+++ b/ARcowabungaproject/res/layout/tab_pizzas.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:id="@+id/tabImg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_centerVertical="true"
         android:layout_toLeftOf="@+id/tabTittle"
         android:contentDescription="@string/content_description_img"
@@ -21,9 +21,10 @@
         android:id="@id/tabTittle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/tab_offers"
+        android:text="@string/tab_pizza"
         android:textSize="20sp"
         android:textColor="@android:color/white"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="5dp"/>
 
 </RelativeLayout>
