--- a/ARcowabungaproject/res/layout/tab_offers.xml
+++ b/ARcowabungaproject/res/layout/tab_offers.xml
@@ -8,14 +8,14 @@
 
     <ImageView
         android:id="@+id/tabImg"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:contentDescription="@string/content_description_img"
-        android:scaleType="fitXY"
-        android:src="@drawable/icontaboffers"
-        android:tag="offers_image"
+        android:layout_width="55dp"
+        android:layout_height="45dp"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/tabTittle" />
+        android:layout_toLeftOf="@+id/tabTittle"
+        android:contentDescription="@string/content_description_img"
+        android:scaleType="center"
+        android:src="@drawable/icontaboffers"
+        android:tag="offers_image" />
 
     <TextView
         android:id="@id/tabTittle"
@@ -24,6 +24,7 @@
         android:text="@string/tab_offers"
         android:textSize="20sp"
         android:textColor="@android:color/white"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="5dp"/>
 
 </RelativeLayout>
