Improve listitem_order_layout

--- a/ARcowabungaproject/res/layout/listitem_order_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_order_layout.xml
@@ -2,9 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="55dp"
     android:clickable="true"
-    android:minHeight="130dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp" >
 
@@ -17,27 +16,30 @@
 
     <ImageButton
         android:id="@+id/imageInOrderItem"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/dateTextInOrderItem"
-        android:background="@drawable/iconorderlist"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:background="@android:color/white"
         android:contentDescription="@string/pizza_icon"
-        android:paddingRight="5dp" />
+        android:padding="5dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/iconorderlist" />
 
     <TextView
         android:id="@id/dateTextInOrderItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/separatorTop"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"
         android:layout_alignParentLeft="true"
+        android:layout_below="@id/separatorTop"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="5dp"
         android:background="#335533"
-        android:text="data" >
+        android:text="data"
+        android:textSize="10sp" >
     </TextView>
-
-    
 
     <TextView
         android:id="@+id/descTextInOrderItem"
@@ -47,8 +49,9 @@
         android:layout_below="@id/dateTextInOrderItem"
         android:layout_marginBottom="13dp"
         android:layout_marginRight="5dp"
-        android:layout_toRightOf="@id/imageInOrderItem"
+        android:layout_marginTop="5dp"
         android:layout_toLeftOf="@+id/priceTextInOrderItem"
+        android:layout_toRightOf="@id/imageInOrderItem"
         android:background="#338888"
         android:text="desc" >
     </TextView>
@@ -57,27 +60,31 @@
         android:id="@id/priceTextInOrderItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/separatorBottom"
         android:layout_below="@id/dateTextInOrderItem"
         android:layout_marginBottom="13dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:layout_toLeftOf="@+id/cursorTextInOrderItem"
         android:background="#FF3333"
         android:text="preu"
         android:textColor="#E63444" >
     </TextView>
+
     <TextView
         android:id="@id/cursorTextInOrderItem"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/separatorBottom"
+        android:layout_alignParentRight="true"
         android:layout_below="@id/dateTextInOrderItem"
         android:layout_marginBottom="13dp"
         android:layout_marginRight="5dp"
-        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
         android:background="#33FF33"
+        android:paddingTop="5dp"
         android:text="@string/cursor"
-        android:textColor="#e73445"
-        android:paddingTop="10dp" >
+        android:textColor="#e73445" >
     </TextView>
 
     <View
