--- a/ARcowabungaproject/res/layout/listitem_product_layout.xml
+++ b/ARcowabungaproject/res/layout/listitem_product_layout.xml
@@ -25,47 +25,62 @@
         android:paddingRight="5dp"
         android:src="@drawable/home_image" />
 
-    <RelativeLayout
-        android:id="@+id/linearProductBasics"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toRightOf="@id/imageInProductItem"
-        android:orientation="horizontal" >
+    <TextView
+        android:id="@+id/titleTextInProductItem"
+        android:layout_width="wrap_content"
+        android:layout_height="32dp"
+        android:layout_below="@id/separatorTop"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_toRightOf="@+id/imageInProductItem"
+        android:background="#335533"
+        android:text="PIZZA CALZONE"
+        android:textColor="#E63444" />
+
+    <ImageButton
+        android:id="@+id/trashIcon"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="20dp"
+        android:layout_toLeftOf="@+id/priceTextInProductItem"
+        android:background="#FF3333"
+        android:src="@drawable/iconpizza"
+        android:text="trash"
+        android:textColor="#E63444" />
+
+    <TextView
+        android:id="@+id/priceTextInProductItem"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="23dp"
+        android:background="#FF3333"
+        android:text="8,50€"
+        android:textColor="#FFFFFF" />
+
+    <LinearLayout
+        android:id="@+id/extraIngredientLayoutInProductItem"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/titleTextInProductItem"
+        android:layout_below="@id/titleTextInProductItem"
+        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/titleTextInProductItem"
-            android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="15dp"
-            android:background="#335533"
-            android:text="PIZZA CALZONE"
-            android:textColor="#E63444" />
-
-        <ImageButton
-            android:id="@+id/trashIcon"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/priceTextInProductItem"
-            android:background="#FF3333"
-            android:src="@drawable/iconpizza"
-            android:text="trash"
-            android:textColor="#E63444" />
-        <!-- android:layout_toRightOf="@+id/titleTextInProductItem" -->
-
-        <TextView
-            android:id="@+id/priceTextInProductItem"
+            android:id="@+id/extraIngredientIntro"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="5dp"
             android:background="#FF3333"
-            android:text="8,50€"
-            android:textColor="#FFFFFF" />
-    </RelativeLayout>
+            android:text="@string/extraIngredientInProductItem"
+            android:textColor="#FFFFFF"
+            android:textSize="10sp" />
+    </LinearLayout>
 
     <View
         android:id="@id/separatorBottom"
