--- a/ARcowabungaproject/res/layout/shooping_cart_layout.xml
+++ b/ARcowabungaproject/res/layout/shooping_cart_layout.xml
@@ -97,7 +97,7 @@
                 android:layout_height="34dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:contentDescription="@string/example_price"
+                android:contentDescription="@string/button_price"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
@@ -106,7 +106,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_margin="5dp"
-                android:text="@string/example_price"
+                android:text="@string/button_price"
                 android:textColor="@android:color/white" />
         </LinearLayout>
     </LinearLayout>
